bug fixes with init methods on note class

--- a/Notes/Notes/Base.lproj/Main.storyboard
+++ b/Notes/Notes/Base.lproj/Main.storyboard
@@ -119,6 +119,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="P2z-np-49g"/>
+        <segue reference="JKe-yE-COI"/>
     </inferredMetricsTieBreakers>
 </document>
